--- a/about-page/css/theme-coworking.css
+++ b/about-page/css/theme-coworking.css
@@ -59,7 +59,7 @@ body {
   line-height: 1.5;
   color: #495057;
   text-align: left;
-  background-color: #fff; }
+  background-color: #f1f4f7; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
