--- a/Important-Stuff/theme-coworking.css
+++ b/Important-Stuff/theme-coworking.css
@@ -8319,7 +8319,7 @@ svg.bg-primary * {
   fill: #1B4079; }
 
 svg.bg-primary-alt * {
-  fill: rgb(71, 129, 201)7; }
+  fill: #f1f4f7; }
 
 svg.bg-secondary * {
   fill: #6c757d; }
