--- a/Important-Stuff/theme-coworking.css
+++ b/Important-Stuff/theme-coworking.css
@@ -8686,7 +8686,7 @@ section {
   box-shadow: 0.5rem 0.5rem 0 rgba(233, 236, 239, 0.5); }
 
 .bg-primary-alt {
-  background: ##f1f4f7; }
+  background: #f1f4f7; }
 
 .bg-primary-2-alt {
   background: #f1f9f6; }
