theme-coworking.css

--- a/Important-Stuff/theme-coworking.css
+++ b/Important-Stuff/theme-coworking.css
@@ -9761,6 +9761,7 @@ body.compensate-for-scrollbar {
 
 .fancybox-container {
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   height: 100%;
   left: 0;
   outline: none;
@@ -9843,6 +9844,7 @@ body.compensate-for-scrollbar {
 
 .fancybox-slide {
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   display: none;
   height: 100%;
   left: 0;
@@ -9895,6 +9897,7 @@ body.compensate-for-scrollbar {
   -webkit-animation-timing-function: cubic-bezier(0.5, 0, 0.14, 1);
   animation-timing-function: cubic-bezier(0.5, 0, 0.14, 1);
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   background: transparent;
   background-repeat: no-repeat;
   background-size: 100% 100%;
