--- a/style.css
+++ b/style.css
@@ -1,119 +1,109 @@
-body {
-  background: #ccc;
+* {
+  box-sizing: border-box;
 }
 
-.timeline-wrapper {
-  display: block;
-  width: 90%;
-  height: 15rem;
-  position: relative;
-  color: #fff;
-  text-align: center;
-  margin: 0 auto;
+body {
+  width: 100vmax;
+  height: 100vmax;
+  margin: 0;
+  padding: 0;
+  background: #e97162;
+  font-family: Arial;
+  overflow: scroll;
 }
-.timeline-wrapper .timeline-line {
-  display: block;
-  width: 93.9%;
-  height: 1px;
-  background: white;
-  position: absolute;
-  top: 50%;
-  -webkit-box-shadow: 0 0 1px black;
-  -moz-box-shadow: 0 0 1px black;
-  box-shadow: 0 0 1px black;
-  left: 3%;
-  margin-left: 2.5px;
-}
-.timeline-wrapper .timeline-content-day {
-  height: 100%;
-}
-.timeline-wrapper .timeline-content-item {
-  background: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
-  width: 6%;
-  display: inline-block;
-  position: relative;
-  height: 100%;
-  margin-right: -5px;
-  -webkit-transition: width .5s;
-  -moz-transition: width .5s;
-  -o-transition: width .5s;
-  transition: width .5s;
-  z-index: 1;
-}
-.timeline-wrapper .timeline-content-item > span {
-  height: 2rem;
-  display: block;
-  font-weight: bold;
-  position: absolute;
-  top: 50%;
-  margin-top: -.25em;
+
+#lineCont {
   width: 100%;
-  text-shadow: 0 0 2px black;
+  height: 20%;
+}
+
+#line {
+  height: 6px;
+  width: 70%;
+  background: #e97162;
+  border-radius: 5px;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  position: relative;
+}
+
+#span {
+  display: none;
+  width: 70%;
+  margin: auto;
+  margin-top: 25%;
+  text-align: center;
+  color: black;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  background: #e97162;
+  border-radius: 15px;
+  position: absolute;
+  top: -7px;
+  border: 3px solid white;
   cursor: pointer;
 }
-.timeline-wrapper .timeline-content-item > span:before {
-  content: " ";
-  display: block;
-  width: .5em;
-  height: .5em;
+.circle:before {
+  content: "";
+  width: 10px;
+  height: 10px;
   background: white;
-  margin: 0 auto .5em auto;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-box-shadow: 0 0 1px black;
-  -moz-box-shadow: 0 0 1px black;
-  box-shadow: 0 0 1px black;
-}
-.timeline-wrapper .timeline-content-item .timeline-content-item-reveal {
-  display: none;
   position: absolute;
-  left: 0;
-  top: 50%;
-  margin-top: -50%;
-  width: 100%;
+  border-radius: 100%;
+  top: 2px;
+  left: 2px;
+  display: none;
 }
-.timeline-wrapper .timeline-content-item .timeline-content-item-reveal a {
+.circle .popupSpan {
+  width: auto;
+  height: auto;
+  padding: 10px;
+  white-space: nowrap;
+  display: inline-block;
+  color: black;
+  position: absolute;
+  top: 20px;
+  left: -75px;
+  display: none;
+  transition: all 0.1s ease-out;
+}
+.circle.hover:before, .circle.active:before {
   display: block;
+}
+.circle.hover .popupSpan, .circle.active .popupSpan {
+  display: block;
+}
+.circle.active .popupSpan {
+  top: -40px;
+}
+
+#mainCont {
+  height: 80%;
+  width: 100%;
+  position: relative;
+  color: black;
+  font-size: 62px;
+  text-align: center;
+  transition: all 0.2s ease-out;
+}
+#mainCont span {
+  display: inline-block;
   width: 100%;
   height: 100%;
-}
-.timeline-wrapper .timeline-content-item .timeline-content-item-reveal a img {
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  max-height: 100%;
-  max-width: 100%;
-  border: 3px solid white;
-  -webkit-box-shadow: 0 0 2px black;
-  -moz-box-shadow: 0 0 2px black;
-  box-shadow: 0 0 2px black;
-}
-.timeline-wrapper .timeline-content-item .timeline-content-item-reveal a span {
   position: absolute;
-  width: 250%;
-  margin-left: 0%;
-  bottom: -2rem;
-  left: 0;
-  font-family: serif;
-  font-size: 1.3em;
-  font-style: italic;
-  text-decoration: none;
-  white-space: nowrap;
-  color: white;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.5), 0 0 1px black;
+  top: 30%;
+  transition: all 0.2s ease-out;
 }
-.timeline-wrapper .timeline-content-item .timeline-content-item-reveal a span:after {
-  content: "\203A";
-  margin-left: .3em;
+#mainCont span.right {
+  left: 200%;
 }
-.timeline-wrapper .timeline-content-item.active {
-  width: 10%;
+#mainCont span.center {
+  left: 0% !important;
 }
-.timeline-wrapper .timeline-content-item.active .timeline-content-item-reveal {
-  display: block;
+#mainCont span.left {
+  left: -100%;
 }
