--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   background: #e97162;
-  font-family: Arial;
+  font-family:Helvetica ;
   overflow: scroll;
 }
 
@@ -30,7 +30,7 @@ body {
 
 #span {
   display: none;
-  width: 70%;
+  width: 100%;
   margin: auto;
   margin-top: 25%;
   text-align: center;
@@ -105,5 +105,5 @@ body {
   left: 0% !important;
 }
 #mainCont span.left {
-  left: -100%;
+  left: -200%;
 }
