--- a/css/theme-coworking.css
+++ b/css/theme-coworking.css
@@ -328,7 +328,7 @@ h6, .h6 {
   font-size: 1rem; }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 400; }
 
 .display-1 {
@@ -4855,7 +4855,7 @@ button.bg-dark:focus {
   background-color: #0a0c0d !important; }
 
 .bg-primary-2 {
-  background-color: #1A936F !important; }
+  background-color: #17a2b8 !important; }
 
 a.bg-primary-2:hover, a.bg-primary-2:focus,
 button.bg-primary-2:hover,
@@ -8364,7 +8364,7 @@ svg.bg-dark-alt * {
   fill: #f2f2f2; }
 
 svg.bg-primary-2 * {
-  fill: #1A936F; }
+  fill: #17a2b8; }
 
 svg.bg-primary-2-alt * {
   fill: #f1f9f6; }
@@ -14041,4 +14041,10 @@ article table {
 .docs-graphic:not(:hover) .btn {
   opacity: 0; }
 
-/*# sourceMappingURL=theme-coworking.css.map */
+
+
+
+
+
+  
+  /*# sourceMappingURL=theme-coworking.css.map */
