--- a/Important-Stuff/theme-coworking.css
+++ b/Important-Stuff/theme-coworking.css
@@ -8320,7 +8320,7 @@ svg.bg-primary * {
   fill: #1B4079; }
 
 svg.bg-primary-alt * {
-  fill: #f1f4f7; }
+  fill: #fff; }
 
 svg.bg-secondary * {
   fill: #6c757d; }
