--- a/css/theme-coworking.css
+++ b/css/theme-coworking.css
@@ -75,7 +75,8 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  }
 
 abbr[title],
 abbr[data-original-title] {
@@ -96,7 +97,8 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  }
 
 ol ol,
 ul ul,
