--- a/style.css
+++ b/style.css
@@ -1,66 +1,66 @@
-body {
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    width: 100%;
-    background: #07051a;
+
+.quiz {
+  display: flex;
+  height: flex;
+}
+.quiz__wrapper {
+  position: relative;
+  display: flex;
+  width: auto;
+  min-width: 320px;
+  margin: auto;
+}
+.quiz__card {
+  display: none;
+  flex-direction: column;
+  width: 100%;
+  min-height: flex;
+  margin: auto;
+  padding: 1rem;
+  text-align: center;
+  color: #ffead1;
+  border-radius: 1rem;
+  background-color: #118192;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.5);
+}
+.quiz__card[aria-active=true] {
+  display: flex;
+  -webkit-animation: revealQuizQuestion 0.5s cubic-bezier(0, 0, 0, 1);
+          animation: revealQuizQuestion 0.5s cubic-bezier(0, 0, 0, 1);
+}
+.quiz__button {
+  display: inline-block;
+  margin: 0.25rem;
+  padding: 0.25rem 1rem;
+  font-size: 1rem;
+  line-height: 1;
+  color: #ffead1;
+  border: 1px solid #ffead1;
+  border-radius: 0.5rem;
+  background-color: #ec8587;
+  box-shadow: 0 2px 0 2px #ffead1;
+}
+.quiz__button:hover, .quiz__button:focus {
+  background-color: #872f47;
+}
+.quiz__button:active {
+  box-shadow: 0 0 0 2px #ffead1;
+  transform: translateY(2px);
+}
+.quiz__results {
+  display: inline-block;
 }
 
-form{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    transition: all 1s;
-    width: 50px;
-    height: 50px;
-    background: white;
-    box-sizing: border-box;
-    border-radius: 25px;
-    border: 4px solid white;
-    padding: 5px;
+@-webkit-keyframes revealQuizQuestion {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
 }
 
-input{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;;
-    height: 42.5px;
-    line-height: 30px;
-    outline: 0;
-    border: 0;
-    display: none;
-    font-size: 1em;
-    border-radius: 20px;
-    padding: 0 20px;
-}
-
-.fa{
-    box-sizing: border-box;
-    padding: 10px;
-    width: 42.5px;
-    height: 42.5px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 50%;
-    color: #07051a;
-    text-align: center;
-    font-size: 1.2em;
-    transition: all 1s;
-}
-
-form:hover{
-    width: 200px;
-    cursor: pointer;
-}
-
-form:hover input{
-    display: block;
-}
-
-form:hover .fa{
-    background: #07051a;
-    color: white;
+@keyframes revealQuizQuestion {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
 }
