--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .quiz__wrapper {
   position: relative;
   display: flex;
-  width: flex;
+  width: 100%;
   min-width: 320px;
   margin: auto;
 }
@@ -17,6 +17,7 @@
   min-height: flex;
   margin: auto;
   padding: 1rem;
+  padding-bottom: 0;
   text-align: center;
   color: #1B4079;
   border-radius: 1rem;
@@ -55,17 +56,17 @@ translateY(-2.5px);
 .quiz__button2 {
   display: inline-block;
   margin: 0.25rem;
-  padding: 0.25rem 1rem;
   font-size: 1rem;
   line-height: 1;
-  color: #f1f4f7;
-  border: 1px solid #f1f4f7;
+  color: rgb(148, 146, 146);
+  font-style: italic ;
+  border: 1px solid #fff;
   border-radius: 0.5rem;
-  background-color: #ff8800;
-  box-shadow: 0 2px 0 2px #f1f4f7;
+  box-shadow: 0 2px 0 2px #fff;
+  float:left;
+  background-color: #fff;
 }
 .quiz__button2:hover, .quiz__button2:focus {
-  background-color: #f8bb6c;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
 translateY(-2.5px);
